# reachout

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  test_discovery.py
.github/workflows/: ci.yml
app/: main.py
app/api/: campaigns.py  dashboard.py  endpoints.py  influencer_detail.py  settings.py
app/core/: auth.py  cache.py  config.py
app/db/: session.py
app/models/: campaign.py  influencer.py  influencer_note.py  tag.py  user_settings.py
app/services/: ai_outreach.py  discovery.py  outreach.py
frontend/: Dockerfile  nginx.conf  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: BulkActionBar.tsx  CampaignCard.tsx  KanbanColumn.tsx  NavBar.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx  AuthContextDef.ts  useAuth.ts
frontend/src/lib/: api.ts
frontend/src/pages/: CampaignsPage.tsx  DashboardPage.tsx  DiscoverPage.tsx  InfluencerDetailPage.tsx  InfluencersPage.tsx  LoginPage.tsx  SettingsPage.tsx  SignUpPage.tsx
storage/key_value_stores/default/: __CRAWLER_STATISTICS_0  __RQ_STATE_9APYCtwtROWh2VCIV  __RQ_STATE_9APYCtwtROWh2VCIV.__metadata__.json  __metadata__.json
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260217194105_name_of_change.sql
supabase/schemas/: influencer.sql  outreach_campaign.sql
tests/: conftest.py  test_cache.py  test_campaigns.py  test_discovery_unit.py  test_endpoints.py  test_influencer_detail.py  test_models.py
(+2 files in other folders)
