[project]
name = "reachout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "browserforge>=1.2.4",
    "crawlee>=1.4.0",
    "fastapi[standard]>=0.129.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "psycopg2>=2.9.11",
    "sqlmodel>=0.0.34",
]
