[project]
name = "reachout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "browserforge>=1.2.4",
    "crawlee>=1.4.0",
    "fastapi[standard]>=0.129.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "psycopg2>=2.9.11",
    "redis>=5.0.0",
    "pyjwt[crypto]>=2.11.0",
    "sqlmodel>=0.0.34",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
